# USB_HOST_VEETHREE

./: CMakeLists.txt  Kconfig
lists/: fsl_component_generic_list.c
osa/: fsl_os_abstraction.h  fsl_os_abstraction_config.h  fsl_os_abstraction_zephyr.c  fsl_os_abstraction_zephyr.h
usb/host/: usb_host_ehci.c  usb_host_ehci.h
usb/include/: usb.h  usb_misc.h
usb/phy/: usb_phy.c
